--- a/index.html
+++ b/index.html
@@ -70,32 +70,20 @@
         <div class="col-12">
             <img class = "center header-image" src="img/header.jpg" alt="Little Liberty" height="98%" width="98%">
         </div>
-        <div class="col-12">
-        <div class="center social-icons">
-          <div class="row">
-            <div class="col col-sm-6">
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div>
-          <div class="col col-sm-6">
-            <a href="#">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </div>
-          <div class="col col-sm-6">
-                        <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </div>
-          <div class="col col-sm-6">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </div>
-          </div>
-        </div>
-        </div>
+            <div class="social-icons">
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </div>
         <p class="lead mb-5">Mission statement goes here: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </section>
