--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@
   <div class="container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
-      <div class="w-100">
-        <!-- <h1 class="mb-0">Little
-          <span class="text-primary">Liberties</span>
-        </h1>
-
-        <div class="subheading mb-5">Liberty for the little people.
-        </div>
-              -->
+      <div class="center w-100">
+        <div class="center about-content">
         <div class="col-12">
             <img class = "center header-image" src="img/header.jpg" alt="Little Liberty" height="98%" width="98%">
         </div>
@@ -86,6 +80,7 @@
               </div>
         <p class="lead mb-5">Mission statement goes here: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+    </div>
     </section>
 
     <hr class="m-0">
