--- a/index.html
+++ b/index.html
@@ -270,6 +270,53 @@
 
     <hr class="m-0">
 
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3">
+          <span class="copyright">Copyright &copy; Little Liberties 2019</span>
+        </div>
+        <div class="col-md-3">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+            <span class="copyright">Website design by: <a href="http://miakotalik.com/"> Mia</a></span>          
+        </div>
+        <div class="col-md-3">
+          <ul class="list-inline quicklinks">
+            <li class="list-inline-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">Terms of Use</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   </div>
 
